# modular-rag-engine

./: .gitignore  README.md  nexus_test.db  pyproject.toml  requirements.txt
examples/: chat_test.py  test_engine.py
rag_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rag_engine/core/: embeddings.py  engine.py  logger.py  query_engine.py
rag_engine/parsers/: cloud_parser.py
rag_engine/storage/: manager.py
