[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag_engine"
version = "0.1.2"
description = "A modular, multimodal, database-agnostic RAG engine for document intelligence."
readme = "README.md"
authors = [
    {name = "Pratik Raj"}
]
requires-python = ">=3.9"

dependencies = [
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-groq",
    "langchain-google-genai",
    "google-genai",
    "llama-parse",
    "pinecone",
    "flashrank",
    "rank_bm25",
    "python-dotenv",
    "requests",
    "pydantic",
    "sqlalchemy",
    "psycopg2-binary"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_engine*"]
